(trunk web) #2774 "Support stats display feature in the web client" -- fix potential layout issue described @ http://trac.transmissionbt.com/ticket/2774#comment:13.  Bug created, spotted, and fixed by Longinus00.  Welcome to the club. :)

--- a/web/stylesheets/common.css
+++ b/web/stylesheets/common.css
@@ -895,7 +895,7 @@ div#prefs_container div.dialog_window {
 }
 
 div#stats_container div.dialog_window {
-	width: 230px;
+	width: 255px;
 	padding: 0 15px;
 }
 
